--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -58,7 +58,7 @@ img#profile-pic{
     font-size: 15px;
     font-weight :500;
     color:white;
-    margin-bottom:3px;
+    margin: 0px;
 }
 
 .wd-bookmark-author-user{
@@ -66,7 +66,7 @@ img#profile-pic{
     font-size: 15px;
     color: rgb(110, 118, 125);
     margin-left: 5px;
-    margin-bottom:3px;
+    margin: 0px;
 }
 
 .wd-bookmark-more{
@@ -89,7 +89,7 @@ img#profile-pic{
 .wd-bookmark-image{
     border-radius: 15px 15px 0px 0px;
     width:504px;
-    height:264px;
+    height:262px;
     object-fit: cover;
     border: 1px solid rgb(110, 118, 125);
     margin-bottom:0px;
