--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -4,56 +4,17 @@
 } */
 
 .wd-text-input {
-    background-color: rgb(47, 51, 54);
-    color: white;
-    width: 70%;
+    /* background-color: white(47, 51, 54);
+    color: rgb(110, 118, 125);
+    border: 1px solid rgb(110, 118, 125); */
     height: 32px;
-    margin: 8px 16px;
+    margin-top: 8px;
     padding-left: 55px;
-    border: none;
-    border-radius: 20px;
-    background-image: url("https://img.icons8.com/ios-glyphs/20/EBEBEB/search--v1.png");
-    background-repeat: no-repeat;
-    background-position: 20px 8px;
     float: left;
 }
 
 .wd-explore-settings {
-    float: right;
-    margin: 13px 12px;
-}
-
-.wd-explore-nav {
-    padding: 16px;
-    text-align: center;
-    font-weight:bold;
-}
- 
-.wd-explore-nav-link {
-    margin-right:8%;
-    color: rgb(110, 118, 125);
-    font-size: 15px;
-    text-decoration: none;
-}
-
-a#highlighted {
-    margin-right:8%;
-    color: rgb(29,161,242);
-    font-size: 15px;
-    padding-bottom:13px;
-    text-decoration: none;
-    border-bottom: 3px solid rgb(29,161,242);
-}
-
-.wd-gray-box{
-    background-color: rgb(47, 51, 54);
-    height: 10px;
-    border: 1px solid rgb(110, 118, 125);
-}
-
-.wd-black-box{
-    height: 20px;
-    margin-right: 16px;
+    margin-top: 12px;
 }
 
 .wd-suggested-post-1{
@@ -164,5 +125,29 @@ img#post-image {
     border-radius:20px;
     object-fit: cover;
 }
- 
+
+.wd-top-bar i {
+    position: absolute;
+}
+
+.wd-search-icon {
+    padding: 15px;
+    min-width: 50px;
+    text-align: center;
+}
+
+.wd-nav-tabs {
+    width: 100%;
+    color: rgb(29,161,242);
+    padding: 0px;
+}
+
+.wd-nav-tabs li {
+    list-style-type: none;
+    display: inline-block;
+}
+
+.wd-nav-tabs .wd-selected {
+    border-bottom: solid 4px rgb(29,161,242);
+}
  
