--- a/public/tuiter/styles.css
+++ b/public/tuiter/styles.css
@@ -1,9 +1,6 @@
 body {
-    background-color: black;
-    margin-left: 16px;
-    border: 1px solid rgb(47, 51, 54);
+    background-color: white;
     height: 2000px;
-    width: 600px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
